fix: adjust z-index of navbar to be on top

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,11 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 8px 36px;
+  z-index: 999;
+  background: rgba(255, 255, 255, 0.798);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .links {
